fix filter style when overflow

--- a/src/components/table.css
+++ b/src/components/table.css
@@ -215,7 +215,9 @@
 }
 
 .FilterContainer.down {
-  height: 50px;
+  /* height: 50px; */
+  height: auto;
+  padding-top: 8px;
   visibility: visible;
 }
 
@@ -223,6 +225,7 @@
   background-color: #f0f0f3;
   height: 28px;
   margin-left: 8px;
+  margin-bottom: 8px;
   padding: 4px 16px;
   border-radius: 16px;
   display: flex;
